--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,16 +12,18 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - run: |
-        cabal --version
+    - name: Haskell versions
+      run: |
         which cabal
+        cabal --version
+        ghc --version
 
     - name: Set installdir
       run: |
-        DIR=/home/runner/.local/bin
-        mkdir -p "${DIR}"
-        cabal user-config update --augment="installdir: ${DIR}"
-        echo "${DIR}" >> "${GITHUB_PATH}"
+        cabal user-config init
+        cabal user-config update --augment="installdir: /home/runner/.local/bin"
+        cabal user-config update --augment="install-method: copy"
+        cabal user-config update --augment="overwrite-policy: always"
 
     - run: echo "$PATH"
 
