--- a/cabal-bug-build-tool.cabal
+++ b/cabal-bug-build-tool.cabal
@@ -1,22 +1,10 @@
-cabal-version: 1.12
-
--- This file has been generated from package.yaml by hpack version 0.36.0.
---
--- see: https://github.com/sol/hpack
-
+cabal-version:  1.12
 name:           cabal-bug-build-tool
-version:        0.0.0
+version:        0
 build-type:     Simple
 
 library
-  exposed-modules:
-      Foo.Lex
-  other-modules:
-      Paths_cabal_bug_build_tool
-  hs-source-dirs:
-      ./
-  build-tools:
-      alex >=3.5.1.0
-  build-depends:
-      base, array
+  exposed-modules:  Foo.Lex
   default-language: Haskell2010
+  build-depends:    base, array
+  build-tools:      alex >=3.5.1.0
