--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,13 +21,13 @@ jobs:
 
     - name: Set installdir
       run: |
-        DIR="~/.cabal/bin"
+        DIR="/home/runner/.cabal/bin"
         mkdir -p "${DIR}"
         echo "${DIR}" >> "${GITHUB_PATH}"
         cabal user-config update --augment="extra-prog-path: ${DIR}"
         cabal user-config update --augment="installdir: ${DIR}"
-      # cabal user-config update --augment="install-method: copy"
-      # cabal user-config update --augment="overwrite-policy: always"
+        cabal user-config update --augment="install-method: copy"
+        cabal user-config update --augment="overwrite-policy: always"
 
     - run: echo "$PATH"
 
